created a styles.css file and added styling for <h1>, <h2> and <p> elements

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cafe Menu</title>
+
+        <style>
+            h1, h2, p {
+                text-align: center;
+            }
+            
+        </style>
     </head> 
 
     <body>
@@ -12,6 +19,11 @@
         <main>
             <h1>CAMPER CAFE</h1>
             <p>Est. 2020</p>
+
+            <section>
+                <h2>Coffee</h2>
+            </section>
+
         </main>
 
     </body>
