--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cafe Menu</title>
-
-        <style>
-            h1, h2, p {
-                text-align: center;
-            }
-            
-        </style>
+        <link rel="stylesheet" href="styles.css">
     </head> 
 
     <body>
