--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
     
-        <div>
+        <div class="menu">
             <main>
                 <h1>CAMPER CAFE</h1>
                 <p>Est. 2020</p>
