added a .bottom-line class and styling for it

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             </main>
 
-            <hr>
+            <hr class="bottom-line">
 
             <footer>
                 <p><a href="https://www.freecodecamp.org">Visit our website</a></p>
